Fix alignment, redesign stats

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ h2 {
 
 .appeared-in {
   display: none;
+  text-align: center;
 }
 
 .card:hover {
@@ -82,14 +83,22 @@ h2 {
 }
 
 .card--text {
-  margin: 0.2rem;
   padding: 1rem;
-
   border-radius: 5px;
+  width: 100%;
+}
+
+.card--text>li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-top: 0.1rem;
 }
 
 .card--img {
-  z-index: 2;
+  z-index: 0;
   display: block;
   width: 400px;
   height: 250px;
@@ -103,13 +112,16 @@ h2 {
 }
 
 .image--container {
-  position: relative;
+  /*position: relative;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
 }
 
 .card--img--background {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 320px;
   height: 240px;
   border: 2px solid #000000;
